--- a/Layout 1, inpage nav/main.scss
+++ b/Layout 1, inpage nav/main.scss
@@ -134,50 +134,44 @@ main {
     }
 
     .contentContainer {
-        display: grid;
-        grid-template-rows: auto 1fr;
+        display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
 
         width: 100%;
         background-color: #262626;
         max-width: 1920px;
-        margin: 0 .8rem;
+        margin: .8rem;
 
 
         @include screen-s() {
-            margin: 0 1.6rem;
+            margin: 1.6rem;
         }
         @include screen-m() {
-            margin: 0 1.6rem;
+            margin: 1.6rem;
             margin-left: $size-aside-width + 1.6rem;
         }
         @include screen-l() {
-            margin: 0 4.8rem;
+            margin: 4.8rem;
             margin-left: $size-aside-width + 4.8rem;
         }
         @include screen-xl() {
-            display: grid;
-            grid-template-columns: 1fr 30rem;
-            grid-template-rows: auto;
-
-            margin-left: auto;
-            margin-right: auto;
+            flex-direction: row-reverse;  
+            margin: 4.8rem auto;
             grid-column: 2;
+            gap: 3.2rem
         }
 
         .content {
             width: 100%;
+            height: 100%;
             background-color: #303030;
             
-            @include screen-xl() {
-                grid-column: 1;
-            }
         }
         .content__nav {
-            min-height: 24rem;
-            @include screen-xl() {
-                grid-column: 2;
-                grid-row: 1;
-            }
+            min-height: 30rem;
+            min-width: 30rem;
+            background-color: #303030;
         }
     }
 
