--- a/Layout 1/main.css
+++ b/Layout 1/main.css
@@ -105,33 +105,47 @@ main .aside--open .aside__content {
     background-color: transparent;
   }
 }
-main .content {
+main .contentContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
   width: 100%;
   background-color: #262626;
   max-width: 1920px;
-  margin: 0 0.8rem;
+  margin: 0.8rem;
 }
 @media (min-width: 650px) {
-  main .content {
-    margin: 0 1.6rem;
+  main .contentContainer {
+    margin: 1.6rem;
   }
 }
 @media (min-width: 1000px) {
-  main .content {
-    margin: 0 1.6rem;
+  main .contentContainer {
+    margin: 1.6rem;
     margin-left: 25.6rem;
   }
 }
 @media (min-width: 1600px) {
-  main .content {
-    margin: 0 4.8rem;
+  main .contentContainer {
+    margin: 4.8rem;
     margin-left: 28.8rem;
   }
 }
 @media (min-width: 2320px) {
-  main .content {
-    margin-left: auto;
-    margin-right: auto;
+  main .contentContainer {
+    flex-direction: row-reverse;
+    margin: 4.8rem auto;
     grid-column: 2;
+    gap: 3.2rem;
   }
+}
+main .contentContainer .content {
+  width: 100%;
+  height: 100%;
+  background-color: #303030;
+}
+main .contentContainer .content__nav {
+  min-height: 30rem;
+  min-width: 30rem;
+  background-color: #303030;
 }
