--- a/Layout 1/main.scss
+++ b/Layout 1/main.scss
@@ -133,27 +133,47 @@ main {
         }
     }
 
-    .content {
+    .contentContainer {
+        display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
+
         width: 100%;
         background-color: #262626;
         max-width: 1920px;
-        margin: 0 .8rem;
+        margin: .8rem;
+
 
         @include screen-s() {
-            margin: 0 1.6rem;
+            margin: 1.6rem;
         }
         @include screen-m() {
-            margin: 0 1.6rem;
+            margin: 1.6rem;
             margin-left: $size-aside-width + 1.6rem;
         }
         @include screen-l() {
-            margin: 0 4.8rem;
+            margin: 4.8rem;
             margin-left: $size-aside-width + 4.8rem;
         }
         @include screen-xl() {
-            margin-left: auto;
-            margin-right: auto;
+            flex-direction: row-reverse;  
+            margin: 4.8rem auto;
             grid-column: 2;
+            gap: 3.2rem
+        }
+
+        .content {
+            width: 100%;
+            height: 100%;
+            background-color: #303030;
+            
+        }
+        .content__nav {
+            min-height: 30rem;
+            min-width: 30rem;
+            background-color: #303030;
         }
     }
+
+    
 }
