--- a/Layout 2/main.css
+++ b/Layout 2/main.css
@@ -40,6 +40,25 @@ header {
   background-color: #222222;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
   z-index: 99;
+  padding: 0 0.8rem;
+}
+@media (min-width: 650px) {
+  header {
+    padding: 0 1.6rem;
+  }
+}
+@media (min-width: 1600px) {
+  header {
+    padding: 0 4.8rem;
+  }
+}
+header .header__content {
+  height: 100%;
+  width: 100%;
+  background-color: #303030;
+  max-width: 128rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer {
@@ -49,6 +68,25 @@ footer {
   background-color: #222222;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
   z-index: 99;
+  padding: 0 0.8rem;
+}
+@media (min-width: 650px) {
+  footer {
+    padding: 0 1.6rem;
+  }
+}
+@media (min-width: 1600px) {
+  footer {
+    padding: 0 4.8rem;
+  }
+}
+footer .footer__content {
+  height: 100%;
+  width: 100%;
+  background-color: #303030;
+  max-width: 128rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 main {
@@ -59,93 +97,65 @@ main {
   display: flex;
   flex-direction: row;
 }
-@media (min-width: 2320px) {
-  main {
-    display: grid;
-    grid-template-columns: 24rem 1fr;
-  }
-}
-main aside {
-  position: absolute;
-  width: 0%;
-  height: 100%;
-  transition-duration: 300ms;
-  transition-timing-function: ease-in-out;
-  transition-property: background-color, width, transform;
-}
-@media (min-width: 1000px) {
-  main aside {
-    width: 24rem;
-  }
-}
-main aside .aside__content {
-  transition-duration: inherit;
-  transition-timing-function: inherit;
-  transition-property: inherit;
-  transform: translateX(-24rem);
-  width: 24rem;
-  background-color: #222222;
-  height: 100%;
-}
-@media (min-width: 1000px) {
-  main aside .aside__content {
-    transform: translateX(0);
-  }
-}
-main .aside--open {
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-main .aside--open .aside__content {
-  transform: translateX(0);
-}
-@media (min-width: 1000px) {
-  main .aside--open {
-    width: 0;
-    background-color: transparent;
-  }
-}
-main .contentContainer {
+main .main__content {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
   width: 100%;
-  background-color: #262626;
-  max-width: 1920px;
   margin: 0.8rem;
 }
 @media (min-width: 650px) {
-  main .contentContainer {
+  main .main__content {
     margin: 1.6rem;
   }
 }
 @media (min-width: 1000px) {
-  main .contentContainer {
+  main .main__content {
     margin: 1.6rem;
-    margin-left: 25.6rem;
   }
 }
 @media (min-width: 1600px) {
-  main .contentContainer {
+  main .main__content {
     margin: 4.8rem;
-    margin-left: 28.8rem;
   }
 }
 @media (min-width: 2320px) {
-  main .contentContainer {
+  main .main__content {
     flex-direction: row-reverse;
-    margin: 4.8rem auto;
-    grid-column: 2;
+    max-width: 161.2rem;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: row-reverse;
     gap: 3.2rem;
   }
 }
-main .contentContainer .content {
+main .main__content .main__sectionContainer {
   width: 100%;
   height: 100%;
+  max-width: 128rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+main .main__content .main__sectionContainer .main__section {
+  height: 60rem;
+  width: 100%;
+  background-color: #262626;
+  border-bottom: solid 1px white;
+}
+main .main__content .main__sectionContainer .main__section .section__content {
   background-color: #303030;
 }
-main .contentContainer .content__nav {
+main .main__content .main__nav {
+  width: 100%;
   min-height: 30rem;
   min-width: 30rem;
   background-color: #303030;
+  max-width: 128rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 2320px) {
+  main .main__content .main__nav {
+    width: 30rem;
+  }
 }
