--- a/Layout 1, inpage nav/main.scss
+++ b/Layout 1, inpage nav/main.scss
@@ -75,6 +75,24 @@ header {
     background-color: #222222;
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
     z-index: 99;
+    .header__content {
+        background-color: #303030;
+        height: 100%;
+        margin: 0 .8rem;
+        @include screen-s() {
+            margin: 0 1.6rem;
+        }
+        @include screen-m() {
+            margin: 0 1.6rem;
+        }
+        @include screen-l() {
+            margin: 0 4.8rem;
+            margin-left: 1.6rem;
+        }
+        @include screen-xl() {
+            margin: 0 1.6rem;
+        }
+    }
 }
 
 footer {
@@ -84,6 +102,24 @@ footer {
     background-color: #222222;
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
     z-index: 99;
+    .footer__content {
+        background-color: #303030;
+        height: 100%;
+        margin: 0 .8rem;
+        @include screen-s() {
+            margin: 0 1.6rem;
+        }
+        @include screen-m() {
+            margin: 0 1.6rem;
+        }
+        @include screen-l() {
+            margin: 0 4.8rem;
+            margin-left: 1.6rem;
+        }
+        @include screen-xl() {
+            margin: 0 1.6rem;
+        }
+    }
 }
 
 main {
